# GC-

./: .gitignore  CMakeLists.txt  README.md  UIthread.c  UIthread.h  custom_threading.c  debugthread.c  debugthread.h  imgui.ini  init.c  init.h  main.c
files/: gekko.dump
files/ROMs/: GetCR.dol
include/: const.h  custom_threading.h  default.h  flags.h  helpers.h  log.h  sleeping.h
src/Core/: CMakeLists.txt  core_debugging.h  debugging.h  system.c  system.h
src/Core/Breakpoints/: breakpoints.c  breakpoints.h
src/Core/Flipper/: CMakeLists.txt  Flipper.c  Flipper.h  Flipper.md  idea.md
src/Core/Flipper/shaders/: GX_constants.h  shaders.h  shaders.py
src/Core/Flipper/shaders/raw/: fragment.glsl  fragment.vert  framebuffer_fragment.glsl  framebuffer_vertex.glsl  trafo.glsl  vertex.glsl  vertex.vert
src/Core/HW/: AudioStreamingInterface.c  AudioStreamingInterface.h  CMakeLists.txt  CommandProcessor.c  CommandProcessor.h  DVDInterface.c  DigitalSoundProcessorInterface.c  DigitalSoundProcessorInterface.h  MemoryInterface.h  PixelEngine.h  ProcessorInterface.c  SerialInterface.c  SerialInterface.h  VideoInterface.c  hardware_registers.c  hardware_registers.h
src/Core/HW/DSP/: CMakeLists.txt  DSP.c  DSP.h  DSP_extended_instructions.c  DSP_extended_instructions.h  DSP_instruction.h  DSP_instructions.c  DSP_instructions.h  DSP_memory.c  DSP_memory.h  DSP_util.h  README.md  dsp_instruction.h  main.c
src/Core/HW/DSP/files/: dsp_coef.h  dsp_data.py  dsp_rom.h
src/Core/HW/include/: hwreg_utils.h
src/Core/HWregs/: AudioStreamingInterface.c  AudioStreamingInterface.h  CMakeLists.txt  CommandProcessor.c  CommandProcessor.h  DVDInterface.h  DigitalSoundProcessorInterface.c  DigitalSoundProcessorInterface.h  ExternalInterface.c  ExternalInterface.h  PixelEngine.c  PixelEngine.h  ProcessorInterface.c  ProcessorInterface.h  SerialInterface.c  SerialInterface.h  VideoInterface.c  VideoInterface.h  hardware_registers.c  hardware_registers.h
src/Core/PPC/: CMakeLists.txt  Gekko.c  Gekko.h  Gekko_init.c  MMU.c  MMU.h  PPC.md  float_utils.c  gekko_instruction.h  instructions.c  instructions.h  interrupts.c  interrupts.h  pipeline.h
src/Core/PPC/Loader/: CMakeLists.txt  helpers.c  helpers.h  loader.c
src/Core/PPC/Registers/: CMakeLists.txt  CR.h  FPR.h  FPSCR.h  GQR.h  MSR.h  SPR.c  SPR.h  TBR.h  XER.h
src/Core/PPC/Registers/hardware_registers/: AudioStreamingInterface.c  AudioStreamingInterface.h  CommandProcessor.c  CommandProcessor.h  DVDInterface.c  DVDInterface.h  DigitalSoundProcessorInterface.c  DigitalSoundProcessorInterface.h  ExternalInterface.c  ExternalInterface.h  GXFIFO.c  GXFIFO.h  GX_FIFO.c  GX_FIFO.h  MemoryInterface.c  MemoryInterface.h  PixelEngine.h  ProcessorInterface.c  ProcessorInterface.h  SerialInterface.c  SerialInterface.h  VideoInterface.c  VideoInterface.h  hardware_registers.c  hardware_registers.h
src/Core/PPC/instructions/: CR.c  aggregate_instructions.c  branch_and_linkage.c  condition_register.c  control_register_logical.c  float_arithmetic.c  float_compare_and_status.c  float_load_store.c  float_move.c  float_mul_add.c  float_rounding_and_conversion.c  gekko_instruction.h  instructions.h  integer_arithmetic.c  integer_compare.c  integer_load_store.c  integer_logical.c  integer_rotate_and_shift.c  mem_sync.c  misc_control.c  paired_single_arithmetic.c  paired_single_load_store.c  paired_single_misc.c  trap_and_control.c  unimplemented.c
src/Core/PPC/registers/: CR.h  FPR.h  FPSCR.h  GQR.h  HID.h  MSR.h  SPR.h  SPR_general.h  TBR.h  WPAR.h  XER.h  condition_register.h  floating_point_status_condition_register.h  hardware_registers.c  hardware_registers.h
src/Core/Scheduler/: scheduler.c  scheduler.cpp  scheduler.h  scheduler_impl.hpp
src/Core/include/: core_utils.h  float_utils.c  float_utils.h  hwreg_utils.h
src/Debugger/: CMakeLists.txt  debugger.cpp  debugger.h
src/Debugger/widgets/: console.h  disassemble.c  disassembly_viewer.h  memory_viewer.h  menubar.cpp  menubar.h  overlay.h  register_viewer.h
src/Frontend/: CMakeLists.txt  controller.cpp  debugger.cpp  debugger.h  frontend.cpp  frontend.h  interface.h
src/Frontend/Renderer/: CMakeLists.txt  renderer_backend.c  renderer_backend.h  renderer_common.c  renderer_common.h  renderer_frontend.c  renderer_frontend.h
src/Frontend/imgui/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
src/Frontend/widgets/: console.h  disassemble.c  disassemble.h  disassembly_viewer.h  memory_viewer.h  menubar.cpp  overlay.h  register_viewer.h
src/IPL/: CMakeLists.txt  loader.c  loader.h
src/Loader/: CMakeLists.txt  helpers.c  helpers.h  loader.c  loader.h
